--- a/src/posts/25电赛杂谈.md
+++ b/src/posts/25电赛杂谈.md
@@ -1,4 +1,83 @@
 ---
 title: 25电赛杂谈
+category:
+  - 比赛
+tag:
+  - 电赛
+  - 成长
+
+date: 2025-09-01
 ---
-## 等结果ing
+
+
+# 2025电赛杂谈
+
+<!-- 可选：文章摘要或前言 -->
+> 全国大学生电子设计竞赛（National Undergraduate Electronics Design Contest）是教育部和工业和信息化部共同发起的大学生学科竞赛之一，是电子信息类学科中规模最大、含金量最高、认可度最广的顶级赛事之一。
+它面向全国本、专科院校的大学生，通常要求参赛者在短短几天内（通常是四天三夜），两人或三人一组，独立完成一个包含硬件电路设计、软件编程、系统调试和报告撰写的完整电子系统作品。
+
+在2025年TI杯全国大学生电子设计大赛中，我所在的队伍由于综测发挥失常，仅获得了E题简易自动瞄准装置（控制类）省一等奖
+
+## 关于控制题
+### 什么是控制题？
+控制类题目的本质是让一个系统按照预设的要求**自动、稳定、精确**地运行。
+它通常围绕“感知 - 决策 - 执行”这一核心**闭环**展开。
+几乎每届必考，**因为它能非常综合地考察学生的硬件设计能力、软件编程能力、算法实现能力和系统调试能力。**
+
+
+
+## 技术点
+为了攻克控制题，我们需要掌握以下技能
+
+#### 1. 单片机
+
+- 单片机开发：熟练掌握至少一种主流单片机的开发流程，而STM32是当前绝对主流，但由于电赛的赞助商是TI（德州仪器）所以比赛会要求至少一道题目使用TI的单片机。
+
+- 传感器技术：会使用并调试常见传感器，如MPU6050（姿态）、编码器（速度/位置）、超声波（距离）等。
+
+- 电机驱动：掌握MOS管H桥或现成的电机驱动模块（如TB6612、DRV8833、L298N等）来驱动直流电机或步进电机。
+
+- 设备通信：掌握多设备不同协议通信方式（如串口，I2C，SPI等）
+
+
+
+
+#### 2. 视觉与算法：
+- **PID控制算法：这是控制类的灵魂！ 必须深刻理解P、I、D三个参数的含义和作用，能明白PID代码的使用，并领悟调参方法。**
+
+- **机器视觉：现在的电赛已经离不开机器视觉图像处理，需要熟练的使用视觉模块（如openmv，k230，maixcam）进行简单的颜色、形状识别和循迹。然而，面对越来越复杂的任务，需要用上opencv库和yolo物体检测模型。**
+
+- 滤波算法：传感器数据通常有噪声，需要软件滤波（如卡尔曼滤波、互补滤波）来获得更准确的数据。
+
+
+#### 3. 硬件与结构：
+- 基本PCB设计能力：这是将电路从“面包板/洞洞板”的试验状态升级为稳定可靠作品的关键一步。避免使用大量杜邦线导致的各种诡异问题，极大提高了系统稳定性。这在需要移动、振动（如小车、平衡系统）的应用中至关重要。
+
+-结构设计与3D建模：功能实现的物理基础：再优秀的算法也需要通过机械结构来执行。一个松垮、抖动、摩擦过大的结构会让最精妙的控制算法失效。自定义结构可以较好地适配你的电路板和传感器位置，避免用一堆支架和胶带勉强固定等不可靠方案，从而大幅提升系统的稳定性和精度。**一个设计精良、打印美观的结构本身就是巨大的加分项，能向评委展示你们队伍卓越的综合工程能力。**
+
+- 软件工具：熟练掌握一款主流EDA软件，如立创EDA（国产，免费，云端，组件库丰富）、Altium Designer（功能强大，专业）或KiCad（免费开源）。学会绘制原理图、进行PCB布局（Layout）、布线（Routing）和生成Gerber制板文件。熟练使用一款主流3D建模软件，Fusion 360（对教育免费，功能强大，生态极好；SolidWorks: 专业机械设计领域的主流软件，功能极其强大（付费，安装比较麻烦）。
+
+
+- 实践：在比赛前，可以将自己常用的单片机最小系统板、电机驱动板、传感器转接板等画成PCB，交给PCB制板厂（如嘉立创）打样备用。同时也可以提前准备一些通用结构的3D打印件。比赛时，根据选题快速设计出系统核心板，快速搭建出硬件载体，能节省大量组装调试时间，并大幅提升调试成功率。
+
+
+# 25E题（简易自动瞄准装置）解析
+
+## 核心任务
+这道题的核心任务控制小车运动的同时控制小车搭载的云台（装配激光笔）瞄准靶面中心持续射出激光。
+
+## 主要难点
+1. 本题要求使用TI的MCU控制小车，对于单片机基础较弱或没有提前使用过TI的开发工具的选手有一定困难。
+2. 视觉模块需要持续、快速、精准地捕捉靶面并识别出中心点，对不同姿态下图像产生的变化进行处理得到正确的目标，需要选手对图形图像处理有深入的了解，以及熟悉一些常用的处理算法。
+3. 基础部分存在陷阱，由于需要使用紫光灯照射在UV感光纸上留下痕迹，而追踪过程留下的所有痕迹都影响结果，需要制作开关，并确定瞄准成功后才开启激光。
+4. 发挥部分需要用到多传感器融合或一些巧思才能完美实现。
+
+# 反思
+本次比赛中，视觉和小车部分比赛第一天就快速的完成了。后面云台步进电机的控制耗费了大量时间，直至今日还没发现问题所在，最后高价购入了成品电机控制器就轻松解决了问题，而此时比赛时间已所剩无几。可见对于电机的控制还准备得不够充分，电机是机器运动的核心，随着科技发展，比赛的要求只会不断提高，我们必须做更多的准备。
+
+# 收获
+
+虽然没有拿到国奖，但通过这次比赛，我学会很多很多技术，深刻体会到了团队协作的重要性，最重要的是认识了两位很好的朋友。技术很多永远学不完，我只能不断追赶，而热爱会让我有不断学习的动力。现在的我还在使用或借鉴很多成品硬件以及他人开源的项目，我希望有朝一日我能完全手搓出属于自己的项目，如果可以也会将其开源出来和大家一起学习交流。
+
+# 画饼
+打算从最基础的电路设计开始到人工智能，设计并制作一个个人项目，只要不失去你的崇高，整个世界都会为你敞开
